# amo-telegram-bot

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: BETATEST.md  BETATEST_DE.md  BETATEST_EN.md  CONTEXT_MEMORY_ARCHITECTURE.md  CURRENT_AUTOREPLY_CONTEXT_PIPELINE_AUDIT.md  FLASK_MIGRATION_PLAN.md  GITHUB_PAGE_DRAFT.md  GROUPS_TOPICS_PLAN.md  LANGUAGE_CONVENTIONS.md  PLUGIN_CONTRACT.md  PLUGIN_E2E_CHECKLIST.md  PLUGIN_INTEGRATION_PLAN.md  RELEASE_NOTES_2026.05.09-Beta.md  RELEASE_NOTES_2026.05.09-Beta_DE.md  RELEASE_NOTES_2026.05.09-Beta_EN.md  RELEASE_NOTES_2026.05.10-Beta_DE.md  RELEASE_NOTES_2026.05.10-Beta_EN.md  RELEASE_NOTES_2026.05.26-Beta_DE.md  RELEASE_NOTES_2026.05.26-Beta_EN.md  RELEASE_NOTES_2026.05.29-2-Beta_DE.md  RELEASE_NOTES_2026.05.29-2-Beta_EN.md  RELEASE_NOTES_2026.06.03-Beta_DE.md  RELEASE_NOTES_2026.06.03-Beta_EN.md  RELEASE_NOTES_2026.06.03_DE.md  RELEASE_NOTES_2026.06.03_EN.md  RELEASE_NOTES_2026.06.17_DE.md  RELEASE_NOTES_2026.06.17_EN.md  RELEASE_NOTES_2026.06.23_DE.md  RELEASE_NOTES_2026.06.23_EN.md  SAFETY_CP_I1_SELF_IMPROVEMENT.md  SETUP_DE.md  SETUP_EN.md  USERPLUGINS.md  WEBUI_PLAN.md  WEBUI_PLUGIN_DETAIL.md  WEBUI_PLUGIN_OVERVIEW.md  WEBUI_REQUIREMENTS.md  YT-RSS.md  i18n-inventory.md  public-repo-metadata.md  (+1 more)
migrations/: env.py
plugins/popgun/: main.py  (+1 more)
tests/: check_userplugin_privacy.py  test_ai_autoreply_wiring.py  test_ai_model_policy.py  test_ai_provider_seam_b3.py  test_ai_response_contract_b3.py  test_ai_router.py  test_ai_router_mem_b3.py  test_ai_service_retry_fallback.py  test_ai_tool_invocation_contract_kie2.py  test_ai_tool_policy_allowlist_kie3.py  test_ai_tool_registry_kie1.py  test_ai_tool_timeout_error_wrapper_kie4.py  test_alembic_migrations.py  test_anthropic_provider.py  test_api_capability_registry_cp_e1.py  test_api_coreplugin_cp_e2.py  test_ask.py  test_bedrock_provider.py  test_browser_provider_adapter.py  test_builtins.py  test_capability_audit_cp_a4.py  test_capability_policy_cp_a2.py  test_capability_quota_cp_a5.py  test_capability_registry_cp_a1.py  test_chat_seen_users_repository.py  test_claim_records.py  test_command_parsing.py  test_consent_prompt_service.py  test_consent_runtime_gate.py  test_consent_service.py  test_context_memory_vector.py  test_context_snapshot.py  test_contextwindow_builder_cp_f1.py  test_core_capability_policy_cp_a3.py  test_current_data_classifier.py  test_current_info_cache.py  test_current_info_eval.py  test_current_info_fetch.py  test_current_info_hybrid.py  test_current_info_research.py  (+123 more)
(+175 files in other folders)
