[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amo-telegram-bot"
version = "0.1.0"
description = "Defensives MVP-Grundgeruest fuer einen Telegram-Bot mit eigener Bot-API-Integration"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "AMO" }]
dependencies = [
  "httpx>=0.27,<1.0",
  "SQLAlchemy>=2.0,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "python-dotenv>=1.0,<2.0",
  "Flask>=3.0,<4.0",
  "Flask-WTF>=1.2,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
