[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amo-telegram-bot"
version = "2026.5.19"
description = "Defensives MVP-Grundgeruest fuer einen Telegram-Bot mit eigener Bot-API-Integration"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "AMO" }]
dependencies = [
  "httpx>=0.27,<1.0",
  "SQLAlchemy>=2.0,<3.0",
  "PyMySQL>=1.1,<2.0",
  "pydantic-settings>=2.2,<3.0",
  "python-dotenv>=1.0,<2.0",
  "Flask>=3.0,<4.0",
  "Flask-WTF>=1.2,<2.0",
  "PyYAML>=6.0,<7.0",
  "playwright>=1.48,<2.0",
  "ccxt>=4.5,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
